k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxtjs
  namespace: aks-architect
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-architect-nuxtjs
  template:
    metadata:
      labels:
        app: aks-architect-nuxtjs
    spec:
      containers:
      - name: aks-architect-nuxtjs
        image: aksarchitect.azurecr.io/aks-archtitect:${IMAGE_TAG}
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
