k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-architect-ingress
  namespace: aks-architect
  labels:
    name: aks-architect-ingress
spec:
  rules:
  - host: aks-architect.dev.cloudkube.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aks-architect-service
            port:
              number: 80
